--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,16 +26,21 @@
           <div class="interest-btn">
           <input type="checkbox" id="checkbox2">
             <label for="checkbox2">
-              <div class="labelcontain" id="jobs">
-                <span class="title">Jobs</span>
-                <span class="description">Job fairs & meet & greets</span>
+              <div class="labelcontain" id="education">
+                <span class="title">Education</span>
+                <span class="description">Classes, training & workshops</span>
               </div>
             </label>
           </div>
         
           <div class="interest-btn">
-            <%= check_box_tag "Convention & Conferences", :categories %> 
-            <%= label_tag "Convention & Conferences"%>
+          <input type="checkbox" id="checkbox3">
+            <label for="checkbox3">
+              <div class="labelcontain" id="tech">
+                <span class="title">Tech</span>
+                <span class="description">Codeathons & Hackathons</span>
+              </div>
+            </label>
           </div>
 
           <!--<div class="interestBox">
@@ -71,18 +76,33 @@
 
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
           <div class="interest-btn">
-            <%= check_box_tag "Seminars & Talks", :categories %>
-            <%= label_tag "Seminars & Talks"%>
+          <input type="checkbox" id="checkbox4">
+            <label for="checkbox4">
+              <div class="labelcontain" id="jobs">
+                <span class="title">Jobs</span>
+                <span class="description">Job fairs & meet & greets</span>
+              </div>
+            </label>
           </div>
 
           <div class="interest-btn">
-            <%= check_box_tag "Online Courses", :categories %> 
-            <%= label_tag "Online Courses"%>
+          <input type="checkbox" id="checkbox5">
+            <label for="checkbox5">
+              <div class="labelcontain" id="education2">
+                <span class="title">Education</span>
+                <span class="description">Online courses, classes & livestreams</span>
+              </div>
+            </label>
           </div>
 
           <div class="interest-btn">
-            <%= check_box_tag "Livecasts & Online Events", :categories %> 
-            <%= label_tag "Livecasts & Online Events"%>
+          <input type="checkbox" id="checkbox6">
+            <label for="checkbox6">
+              <div class="labelcontain" id="networking">
+                <span class="title">Networking</span>
+                <span class="description">Fireside chats & meetups</span>
+              </div>
+            </label>
           </div>
 
           <!-- <div class="interestBox">
