--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,18 +11,21 @@
 
 <!-- Dropdown Menu for Dates Filters -->
 			  <button class="btn dropdown-toggle sr-only" type="button" id="dropdownMenu1" data-toggle="dropdown">
-			    Dates
+			    Date
 			    <span class="caret"></span>
 			  </button>
 
 			  <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="dropdownMenu1">
-			  	<li role="presentation" class="dropdown-header">Filter by...</li>
-			  	<li role="presentation" class="divider"></li>
+
 					<button type="button" id="today" class="btn btn-default" onclick="today()">Today</button>
 
 					<button type="button" id="tomorrow" class="btn btn-default" onclick="tomorrow()">Tomorrow</button>
 
-					<button type="button" id="weekend" class="btn btn-default" onclick="weekend()">Weekend</button>
+					<button type="button" id="weekend" class="btn btn-default" onclick="weekend()">This Weekend</button>
+
+					<button type="button" id="tomorrow" class="btn btn-default" onclick="tomorrow()">Next Week</button>
+
+					<button type="button" id="weekend" class="btn btn-default" onclick="weekend()">Next Weekend</button>
 			  </ul>
 			</div>
 		</div>
