--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -21,7 +21,8 @@
     height: 100vh;
     width: 100vw;
     position: relative;
-    background: url(http://www.johnmaclean.com/data/photos/222_1_mg_6129_livebooks.jpg) 20% 0px no-repeat fixed;
+    background: url(http://media.expedia.com/media/content/shared/images/travelguides/destination/178280/Griffith-Observatory-61607.jpg) 20% 0px no-repeat fixed;
+    background-size: cover;
   }
 
   .overlay{
