add BG Color to Show, position

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -270,7 +270,8 @@ section {
 
 .event_details {
 	font-size: 1em;
-	font-weight: 400
+	font-weight: 400;
+  margin-top: 5px;
 }
 
 .event_description {
