--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,7 +58,9 @@
   width: 100%;
   margin: auto 0;
   color: #d3d3d3;
-  margin-top: 5%;
+  margin-top: 12%;
+  /*color: rgba(248, 146, 49, 0.4);*/
+  font-size: 2.5em;
 }
 
 .settings-email-label {
