--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -43,7 +43,8 @@
 	}
 
 	#whole_thang {
-		background-color: black;
+		padding-left: 15px;
+		padding-right: 15px;
 	}
 
 	img {
@@ -73,9 +74,20 @@
 		font-size: 3em;
 		margin-left: -21px;
 	}
-	.glyphicon-home {
-		font-size: 2.5em;
-	}	
+
+.show-container-margintop {
+	margin-top: 15px;
+}
+
+.hosted_by {
+	margin-top: 15px;
+}
+
+.container-show {
+	background-color: rgba(248, 146, 49, 0.4);
+	margin-top: 10%;
+}
+
 </style>
 
 <!-- Container for event photo and description -->
@@ -90,7 +102,7 @@
 
 		<!-- Bottom Fixed Navigation -->
 		<nav id="bottom_nav" style="border-top: 1px solid #ccc">
-		  <div class="container">
+		  <div class="container show-container-margintop">
 				 <div class="row">
 					<div class="col-xs-4">
 					<%start_time = @event.event_date.utc.strftime('%Y%m%dT%H%M00Z')%>
@@ -123,7 +135,7 @@
 				</div>
 		  </div>
 		</nav>
-
+		<div class="container-show">
 		<div class="row">
 			<div class="col-md-12 text-center">
 			<h1 class="event_name text-center" data-toggle="collapse" data-target="#demo"><%= @event.name %></h1>
@@ -134,11 +146,11 @@
 			<div class="col-md-12 event_details">
 				<p class="text-center">
 				<%= @event.event_date.strftime('%a, %b %d @ %l:%M %p') %></p>
-				<p class="text-center">Hosted by <%= @event.group %></p>
+				<p class="text-center hosted_by">Hosted by <%= @event.group %></p>
 				<p class="text-center"><%= @event.venue %> <%= @event.city %></p>
 			</div>
 		</div>
-
+		</div>
 		<div class="row">
 			<div class="col-md-12 event_description">
 				<%= truncate(strip_tags(@event.description), length: 500) %>
