style the ACCESS btn/link

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -219,7 +219,7 @@
 
     <br><br> -->
 
-    <div><%= f.submit "ACCESS" %></div>
+    <div><%= f.submit "ACCESS", class: "access_button" %></div>
     <br>
   <% end %>
 
