Remove devise and add custom user login view, controllers with new routes

--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -19,7 +19,7 @@
               <span class="glyphicon glyphicon-envelope"></span>
               <% end %></li>
             <li><%= link_to 'Send Feedback', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', target: "_blank" %></li>
-            <%= render 'layouts/login' %>
+            <%#= render 'layouts/login' %>
           </ul>
         </div>
         <a class="navbar-toggle" data-toggle="collapse" data-target="#nav2" id="nav2_icon">
