--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,11 @@
 <div id="welcomeBackground">
-<div class="overlay">
+  <div class="overlay">
 	<!-- <h1 class="glyphicon glyphicon-calendar"></h1> -->
 
-  <div class="welcomeLogo">
-  </div>         
+    <div class="welcomeLogo">
+    </div>         
 
 	<!-- Sign Up Button -->
-	<%= link_to 'Discover Events', new_user_registration_path, class: 'ctaSignUp' %>
-</div>
+	 <%= link_to 'Discover Events', users_new_path, class: 'ctaSignUp' %>
+  </div>
 </div> 
