--- a/app/views/layouts/_sign_up.html.erb
+++ b/app/views/layouts/_sign_up.html.erb
@@ -1,5 +1,5 @@
 
 
-<p class="navbar-text text-center sign_up">
-  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %>
-</p>
+<!-- <p class="navbar-text text-center sign_up">
+  <%#= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %>
+</p> -->
