--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,8 @@
     <h5>Immediately filter through thousands of events to create your personalized list.</h5>
   </div>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
+  <%= form_for :user do |f| %>
+    <%#= devise_error_messages! %>
 
     <div class="interestHeader"><%= f.label :categories %>
     </div>
