--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,6 +17,11 @@
 	.fa-users, .rsvp_badge, .fa-calendar, .fa-heart {
 		color: black;
 	}
+	
+	.fa {
+		font-size: 1.4em;
+		margin-top: 3px;
+	}
 
 	button.fa-calendar{
 		box-shadow: none;
