Center dropdown menus in events index page, fix border radius on location button, style Date dropwdown menu.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,23 +11,23 @@
 
 <!-- Dropdown Menu for Location Filters -->
 
-			  <button class="btn dropdown-toggle sr-only" type="button" id="dropdownLocation" data-toggle="dropdown">
+			  <button class="btn dropdown-toggle sr-only location-btn" type="button" id="dropdownLocation" data-toggle="dropdown">
 			    Location
 			    <span class="caret"></span>
 			  </button>
 
 			  <ul class="dropdown-menu dropdown-menu-left" role="menu" aria-labelledby="dropdownLocation">
 
-					<button type="button" id="beach" class="btn btn-default" onclick="beach()">Silicon Beach</button>
+					<button type="button" id="beach" class="btn btn-default cc" onclick="beach()">Silicon Beach</button>
 
-					<button type="button" id="los_angeles" class="btn btn-default" onclick="los_angeles()">Los Angeles</button>
+					<button type="button" id="los_angeles" class="btn btn-default cc" onclick="los_angeles()">Los Angeles</button>
 
-					<button type="button" id="downtown" class="btn btn-default" onclick="downtown()">Downtown</button>
+					<button type="button" id="downtown" class="btn btn-default cc" onclick="downtown()">Downtown</button>
 
-					<button type="button" id="pasadena" class="btn btn-default" onclick="pasadena()">Pasadena</button>
+					<button type="button" id="pasadena" class="btn btn-default cc" onclick="pasadena()">Pasadena</button>
 			  </ul>
 
-			  	<button type="button" id="fav" class="btn btn-default" onclick="fav()">Favorites</button>
+			  	<button type="button" id="fav" class="btn btn-default cc" onclick="fav()">Favorites</button>
 
 
 
