--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -4,10 +4,10 @@
       <div class="container">
         <%= link_to image_tag("Icon_final.png", :class => "navbar-brand"), root_path %>
 
-        <a class="navbar-toggle" data-toggle="collapse" data-target="#nav1" id="nav1_icon">
+        <!-- <a class="navbar-toggle" data-toggle="collapse" data-target="#nav1" id="nav1_icon">
           <span class="hamburger">☰</span>
         </a>
-        <div class="navbar-collapse collapse" id="nav1">
+ -->        <div class="navbar-collapse collapse" id="nav1">
           <ul class="nav pull-left navbar-nav">
             <li><%= link_to(events_path) do %>
               <span class='glyphicon glyphicon-calendar'></span>
@@ -23,7 +23,8 @@
           </ul>
         </div>
         <a class="navbar-toggle" data-toggle="collapse" data-target="#nav2" id="nav2_icon">
-          <span class="filter"><%= image_tag("filter.svg", :class => "filter_icon") %></span>
+          <!-- <span class="filter"><%= image_tag("filter.svg", :class => "filter_icon") %></span> -->
+          <span class="hamburger">☰</span>
         </a>
         <div class="navbar-collapse collapse" id="nav2">
           <ul class="nav pull-left navbar-nav">
