--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -67,6 +67,10 @@ $maincolor: lighten(#ccc, 40%);
 	color: gray;
 }
 
+a#nav2_icon:hover {
+  text-decoration: none !important; 
+}
+
 .glyphicon.glyphicon-star {
 	color: rgb(248, 146, 49);
 }
