remove pasadena filter in list view

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -24,7 +24,7 @@
 
 					<button type="button" id="downtown" class="btn btn-default cc" onclick="downtown()">Downtown</button>
 
-					<button type="button" id="pasadena" class="btn btn-default cc" onclick="pasadena()">Pasadena</button>
+<!-- 					<button type="button" id="pasadena" class="btn btn-default cc" onclick="pasadena()">Pasadena</button> -->
 			  </ul>
 
 			  	<button type="button" id="fav" class="btn btn-default cc" onclick="fav()">Favorites</button>
