Fix button-silicon so it's formatted left

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -385,6 +385,10 @@ button.location-btn {
     border-radius: 5px 0 0px 5px;
 }
 
+#beach {
+  margin-left: 0;
+}
+
 li.dropdown-header{
   color: black;
   font-weight: bold;
