--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -1,49 +1,33 @@
-  <!-- Begin Navbar -->
-  <div id="nav">
-    <div class="navbar navbar-inverse navbar-static-top">
-      <div class="container">
-        
-
-        <!-- <a class="navbar-toggle" data-toggle="collapse" data-target="#nav1" id="nav1_icon">
-          <span class="hamburger">☰</span>
-        </a>
- -->        
-        <div class="navbar-collapse collapse" id="nav1">
-          <ul class="nav pull-left navbar-nav">
-            <li><%= link_to(events_path) do %>
-              <span class='glyphicon glyphicon-calendar'></span>
-            <% end %></li>
-            <li><%= link_to(favorite_path) do %>
-              <span class='glyphicon glyphicon-star'></span>
-            <% end %></li>
-            <li><%= mail_to "rob@accessfuel.com" do %>
-              <span class="glyphicon glyphicon-envelope"></span>
-              <% end %></li>
-            <li><%= link_to 'Send Feedback', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', target: "_blank" %></li>
-            <%#= render 'layouts/login' %>
-          </ul>
-        </div>
-        <a class="navbar-toggle" data-toggle="collapse" data-target="#nav2" id="nav2_icon">
-          <!-- <span class="filter"><%= image_tag("filter.svg", :class => "filter_icon") %></span> -->
-          <span class="hamburger">☰</span>
-        </a>
-        <div class="navbar-collapse collapse" id="nav2">
-          <ul class="nav pull-left navbar-nav">
-            <li><%= link_to(events_path) do %>
-              <span class='glyphicon glyphicon-calendar'></span>
-            <% end %></li>
-            <li><%= link_to(favorite_path) do %>
-              <span class='glyphicon glyphicon-star'></span>
-            <% end %></li>
-            <li><%= mail_to "rob@accessfuel.com" do %>
-              <span class="glyphicon glyphicon-envelope"></span>
-              <% end %></li>
-            <li><%= link_to 'Send Feedback', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', target: "_blank" %></li>
-            <%= render 'layouts/login' %>
-          </ul>
-        </div> 
-<%= link_to image_tag("Icon_final.png", :class => "navbar-brand"), root_path %>
+<div id="nav">
+  <div class="navbar navbar-inverse navbar-static-top">
+    <div class="container">
+      <div class="navbar-collapse collapse" id="nav1">
       </div>
-    </div><!-- /.navbar -->
-  </div>
-  <!-- End Navbar -->
+      <a class="navbar-toggle" data-toggle="collapse" data-target="#nav2" id="nav2_icon">
+        <span class="hamburger">☰</span>
+        <%= link_to image_tag("Icon_final.png", :class => "navbar-brand"), root_path %>
+      </a>
+      <div class="navbar-collapse collapse" id="nav2">
+        <ul class="nav pull-left navbar-nav">
+        
+          <li><%= link_to(events_path) do %>
+            <span class='glyphicon glyphicon-calendar'></span>
+          <% end %>
+          </li>
+
+          <li><%= link_to(favorite_path) do %>
+            <span class='glyphicon glyphicon-star'></span>
+          <% end %>
+          </li>
+
+          <li><%= mail_to "rob@accessfuel.com" do %>
+            <span class="glyphicon glyphicon-envelope"></span>
+            <% end %>
+          </li>
+
+          <li><%= link_to 'Send Feedback', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', target: "_blank" %></li>
+        </ul>
+      </div> <!-- #id2 -->
+    </div> <!-- .container -->
+  </div> <!-- .navbar navbar-inverse navbar-static-top -->
+</div> <!-- #nav -->
