--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -1,3 +1,9 @@
+<style type="text/css">
+  .hamburger, .navbar-toggle {
+    cursor: pointer;
+  }
+</style>
+
 <div id="nav">
   <div class="navbar navbar-inverse navbar-static-top">
     <div class="container">
