--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -18,11 +18,29 @@
   }
 
   #welcomeBackground {
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-    background: url(http://www.johnmaclean.com/data/photos/222_1_mg_6129_livebooks.jpg) 20% 0px no-repeat fixed;
+    // height: 100vh;
+    // height: 750px;
+    // width: 450px;
+    min-height: 1000px;
+    width: 800px;
+    max-height: 90%;
+    background-position-x: -120px;
+    // width: 100vw;
+    // position: cover;
+    // width: 100%;
+    // height: 100%;
+    // position: relative;
+    // background-size: 160% auto;
+    background-size: 100% auto;
+
+    background-image: url(http://tonybradleyphotography.files.wordpress.com/2012/09/img_90161.jpg);
+    // background-position: 20% 0px;
+    // background-position:; 
+    // 20% 0px no-repeat fixed;
+    background-repeat: no-repeat;
   }
+
+  
 
   .overlay{
   position: absolute;
@@ -46,7 +64,7 @@
     position: relative;
     margin: 0 auto;
     padding-top: 10%;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     display: block;
   }
 
@@ -59,7 +77,7 @@
     width: 80%;
     min-width: 200px;
     height: auto;
-    min-height: 200px;
+    min-height: 100px;
     position: absolute;
     bottom: 20%;
     left: 0;
@@ -70,10 +88,10 @@
     text-shadow: 0 0 0 black !important;
   }
 
-  .ctaSignUp {
+  .ctaSignUp{
     font-family: 'Lato', sans-serif !important;
     position: absolute;
-    bottom: 10%;
+    bottom: 5%;
     left: 0;
     right: 0;
     margin: 0 auto;
