--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -19,19 +19,19 @@
 
   #welcomeBackground {
     // height: 100vh;
-    // height: 750px;
-    // width: 450px;
-    min-height: 1000px;
-    width: 800px;
+    height: 650px;
+    width: 400px;
+    // min-height: 1000px;
+    // width: 800px;
     max-height: 90%;
-    background-position-x: -120px;
+    background-position-x: -125px;
     // width: 100vw;
     // position: cover;
     // width: 100%;
     // height: 100%;
     // position: relative;
     // background-size: 160% auto;
-    background-size: 100% auto;
+    background-size: 200% auto;
 
     background-image: url(http://tonybradleyphotography.files.wordpress.com/2012/09/img_90161.jpg);
     // background-position: 20% 0px;
@@ -40,7 +40,7 @@
     background-repeat: no-repeat;
   }
 
-  
+
 
   .overlay{
   position: absolute;
