--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -2,6 +2,11 @@
 
 @media only screen and (max-width: 540px) {
 
+  body, html { 
+    overflow-x:hidden; 
+    overflow-y: hidden;
+  }
+
   .mobileNavIcon {
   color: rgb(248, 146, 49);
   display: inline-block;
