modify navbar to make it mobile first

--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -2,6 +2,21 @@
   .hamburger, .navbar-toggle {
     cursor: pointer;
   }
+
+  .navbar-brand {
+    margin-top: 12px;
+  }
+
+  .filter_svg {
+    margin-left: 15px;
+    margin-top: 14px;
+    float:right;
+  }
+
+  .hamburger {
+    font-size: 2em;
+    margin-left: -15px;
+  }
 </style>
 
 <div id="nav">
