fix home page image to be responsive on web

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -21,7 +21,8 @@
     background-image: url(http://tonybradleyphotography.files.wordpress.com/2012/09/img_90161.jpg);
     background-repeat: no-repeat;
     width: 100%;
-    min-height: 700px;
+    min-height: 100vh;
+    max-height: 1000px;
     background-size: 110% auto;
   }
 
