--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -88,7 +88,7 @@
           <input type="checkbox" id="checkbox5">
             <label for="checkbox5">
               <div class="labelcontain" id="education2">
-                <span class="title">Education</span>
+                <span class="title">Online</span>
                 <span class="description">Online courses, classes & livestreams</span>
               </div>
             </label>
