Add navbar to show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -104,6 +104,8 @@
 
 </style>
 
+<%= render 'events/nav_bar' %>
+
 <!-- Container for event photo and description -->
 <div id="whole_thang">
 	<section class="description">
@@ -172,10 +174,6 @@
 		<div class="row">
 			<div class="col-md-12 event_description">
 				<%= truncate(strip_tags(@event.description), length: 750) %>
-				<%= link_to events_path do %>
-    			<i class="glyphicon glyphicon-home home"></i>
-				<% end %>
-				<!-- <span class="glyphicon glyphicon-home home"><%= link_to events_path %></span> -->
 			</div>
 		</div>
 	</section>
